<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.authentication.ForgotPasswordFragment">

    <TextView
        android:id="@+id/forgot_password_fragment_forgot_password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppins"
        android:text="@string/all_forgot_password"
        android:textColor="@color/navy_blue"
        android:textSize="@dimen/text_size_22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/forgot_password_fragment_email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/deep_sky_blue"
        android:fontFamily="@font/poppins"
        android:hint="@string/all_email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_fragment_divider" />

    <Button
        android:id="@+id/forgot_password_fragment_request_password_button"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="50dp"
        android:layout_marginTop="54dp"
        android:backgroundTint="@color/deep_sky_blue"
        android:fontFamily="@font/poppins"
        android:text="@string/forgot_password_fragment_send_request_password_link"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="@+id/forgot_password_fragment_email_edittext"
        app:layout_constraintStart_toStartOf="@+id/forgot_password_fragment_email_edittext"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_fragment_email_edittext" />

    <TextView
        android:id="@+id/forgot_password_can_remember_password_textview"
        android:layout_width="250dp"
        android:layout_height="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/all_i_can_remember_my_password"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toStartOf="@+id/forgot_password_fragment_login_textview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/forgot_password_fragment_request_password_button"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_fragment_request_password_button" />

    <TextView
        android:id="@+id/forgot_password_fragment_login_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/all_login"
        android:textColor="@color/deep_sky_blue"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="@+id/forgot_password_fragment_request_password_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/forgot_password_can_remember_password_textview"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_fragment_request_password_button" />

    <View
        android:id="@+id/reset_password_fragment_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1dp"
        android:layout_marginTop="71dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_fragment_forgot_password_textview" />


</androidx.constraintlayout.widget.ConstraintLayout>