<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.authentication.ResetPassword"
    android:id="@+id/reset_password_fragment_layout">


    <TextView
        android:id="@+id/reset_password_fragment_forgot_password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppins"
        android:text="@string/all_forgot_password"
        android:textColor="@color/navy_blue"
        android:textSize="@dimen/text_size_22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reset_password_fragment_new_password_textinput_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        app:hintTextColor="@color/deep_sky_blue"
        app:boxStrokeColor="@color/deep_sky_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_fragment_divider"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/reset_password_fragment_new_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins"
            android:hint="@string/reset_password_verification_fragment_new_password"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reset_password_fragment_confirm_new_password_layout"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        app:hintTextColor="@color/deep_sky_blue"
        app:boxStrokeColor="@color/deep_sky_blue"
        app:layout_constraintEnd_toEndOf="@+id/reset_password_fragment_new_password_textinput_layout"
        app:layout_constraintStart_toStartOf="@+id/reset_password_fragment_new_password_textinput_layout"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_fragment_new_password_textinput_layout"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/reset_password_fragment_confirm_new_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins"
            android:hint="@string/reset_password_verification_fragment_confirm_new_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reset_password_fragment_reset_password_button"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/deep_sky_blue"
        android:fontFamily="@font/poppins"
        android:text="@string/all_reset_password"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintEnd_toEndOf="@+id/reset_password_fragment_confirm_new_password_layout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/reset_password_fragment_confirm_new_password_layout"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_fragment_confirm_new_password_layout" />

    <TextView
        android:id="@+id/reset_password_fragment_can_remember_password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_28dp"
        android:fontFamily="@font/poppins"
        android:text="@string/all_i_can_remember_my_password"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toStartOf="@+id/reset_password_fragment_login_textview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/reset_password_fragment_reset_password_button"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_fragment_reset_password_button" />

    <TextView
        android:id="@+id/reset_password_fragment_login_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_28dp"
        android:fontFamily="@font/poppins"
        android:text="@string/all_login"
        android:textColor="@color/deep_sky_blue"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/reset_password_fragment_can_remember_password_textview"
        app:layout_constraintEnd_toEndOf="@+id/reset_password_fragment_reset_password_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reset_password_fragment_can_remember_password_textview"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_fragment_reset_password_button" />

    <View
        android:id="@+id/reset_password_fragment_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_2dp"
        android:layout_marginTop="59dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_fragment_forgot_password_textview" />


</androidx.constraintlayout.widget.ConstraintLayout>
