<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_20dp"
    android:fillViewport="true"
    android:background="@color/deep_sky_blue"
    tools:context=".fragments.authentication.SignupLoginFragment"
    android:id="@+id/fragment_signup_login_parent_layout">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fragment_signup_login_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/signup_choices_fragment_a_logo_of_the_app"
            android:src="@drawable/ic_clad_logo_white"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_signup_login_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:fontFamily="@font/poppins"
            android:text="@string/sign_up_login_tag_line"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_signup_login_image_view" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_signup_signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_100dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_bold"
            app:cornerRadius="@dimen/margin_5dp"
            android:text="@string/signup_login_fragment_sign_up"
            android:textAllCaps="true"
            android:textColor="@color/deep_sky_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_signup_login_textview" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_signup_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/deep_sky_blue"
            android:layout_marginTop="@dimen/margin_20dp"
            app:strokeWidth="@dimen/layout_height_or_width_2dp"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/signup_choices_fragment_login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_signup_signup_button"
            app:layout_constraintVertical_bias="0.041"
            app:strokeColor="@color/white" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


